# fast_api

./: main.py  pyproject.toml
src/: schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py
src/routes/: contacts.py
